--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "issue-tracker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.3.1",
-    "@radix-ui/themes": "^2.0.3",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
-    "autoprefixer": "10.4.16",
-    "classnames": "^2.3.2",
-    "easymde": "^2.18.0",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "next": "14.0.4",
-    "postcss": "8.4.32",
-    "prisma": "^5.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "react-simplemde-editor": "^5.2.0",
-    "tailwindcss": "3.4.0",
-    "typescript": "5.3.3"
-  }
+	"name": "issue-tracker",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.7.1",
+		"@radix-ui/themes": "^2.0.3",
+		"@types/node": "20.10.5",
+		"@types/react": "18.2.45",
+		"@types/react-dom": "18.2.18",
+		"autoprefixer": "10.4.16",
+		"axios": "^1.6.2",
+		"classnames": "^2.3.2",
+		"easymde": "^2.18.0",
+		"eslint": "8.56.0",
+		"eslint-config-next": "14.0.4",
+		"next": "14.0.4",
+		"postcss": "8.4.32",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.46.1",
+		"react-icons": "^4.11.0",
+		"react-simplemde-editor": "^5.2.0",
+		"tailwindcss": "3.4.0",
+		"typescript": "5.3.3",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"prisma": "^5.7.1"
+	}
 }
